# rdist_tensor

./: .gitignore  README.md  accumulator_stationary_opt0.py  accumulator_stationary_opt1.py  alternating_optimizer.py  analysis.py  autotune_job.sh  bench_accuracy.sh  bench_accuracy_samples.sh  bench_baseline_comparison.sh  bench_baselines.sh  bench_communication_comparison.sh  bench_dist_comparison.sh  bench_load_balance.sh  bench_progress_vs_time.sh  bench_scaling.sh  bench_strong_scaling.sh  bench_weak_scaling.sh  bench_weak_scaling_synthetic.sh  candecomp_standard.py  common.py  conda_config.sh  decompose.py  decompose_sparse.py  distmat.py  env_template.sh  exact_als.py  exafac_controller.py  exafac_server.py  grid.py  jobscript.sh  jobscript_io.sh  jobscript_srun.sh  load_tensor.py  local_kernels.py  low_rank_tensor.py  lustre_stripe_cmd.txt  modules.sh  modules_summit.sh  mpi_bench.py  (+16 more)
analysis/: analysis.py
baseline/: amazon_decomposition_bench_1node128threads.out  amazon_decomposition_bench_1node2threads.out  amazon_decomposition_bench_4node_128threads.out  conversion_script.sh  splatt_config.sh  splatt_run_script.sh
baseline/outputs/: amazon_conversion_receipt.out  amazon_decomposition_bench_1node128threads.out  amazon_decomposition_bench_2node128threads.out  amazon_decomposition_bench_2node2threads.out  amazon_decomposition_bench_4node_2threads.out  (+3 more)
cpp_ext/: bloom_filter.cpp  build_test_extension.sh  common.h  filter_nonzeros.cpp  hashing.h  redistribute_tensor.cpp  setup.py  tensor_alltoallv.h  tensor_kernels.cpp  test_extension_script.py
exafac/: common.py  distmat.py  grid.py  low_rank_tensor.py  sampling.py  sparse_tensor.py  sparse_tensor_e.py
experimental/: compile_test_project.sh  cuda_aware_mpi4py.py  exact_leverage_scores.py  mkl_version.c  mpi_bench.sh  multiprocessing_test.py  tbb_test.cpp  test_compilation  test_compilation.cpp  test_rng.py  tests.py  threading_test.py  valgrind_execute.sh
experimental/graphblas_io/: CMakeLists.txt  modules.sh  prog.cpp  progressbar.hpp  run.sh
one_sided_comm_bench/: CMakeLists.txt  bench_accum_get.cpp  modules.sh
serial/: serial_cpu.py  serial_gpu.py
tensor_io/: CMakeLists.txt  convert_konect_to_tns.cpp  jobscript_io.sh  lustre_stripe_cmd.txt  modules.sh  modules_summit.sh  preprocess_frostt_datasets.py  process_frostt_tensor.cpp  process_konect_tensor.cpp  tns_conversion.cpp
tensors/: frostt_tensors.txt
visualization/: chart_generator.ipynb  plotting_script.py  visualization.ipynb
(+43 files in other folders)
